--- a/bookstore/src/main/resources/templates/booklist.html
+++ b/bookstore/src/main/resources/templates/booklist.html
@@ -23,8 +23,12 @@
             <td th:text="${book.title}"></td>
             <td th:text="${book.isbn}"></td>
             <td th:text="${book.publicationYear}"></td>
+            <td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
         </tr>
+
     </table>
+
+    <a href="/add">Add Book</a>
 
 </body>
 
