--- a/bookstore/src/main/resources/templates/addbook.html
+++ b/bookstore/src/main/resources/templates/addbook.html
@@ -10,7 +10,7 @@
 <body>
     <h2>Add Book</h2>
 
-    <form th:action="@{/newbook}" th:object="${book}" method="post">
+    <form th:action="@{/savebook}" th:object="${book}" method="post">
 
 
         <td>Author: <input type="text" th:field="*{author}"></td><br />
