--- a/bookstore/src/main/resources/templates/index.html
+++ b/bookstore/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Hello, I am the index page</h1>
 
-    <p>Here we will propably do something fun!</p>
+    <a href="/booklist">Booklist</a>
 
 </body>
 
