Added bootstarp css

--- a/bookstore/src/main/resources/templates/addbook.html
+++ b/bookstore/src/main/resources/templates/addbook.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
     <title>Add book</title>
 </head>
 
@@ -20,7 +21,7 @@
         <td>Price: <input type="text" th:field="*{price}"></td>
 
 
-        <button type="submit">Submit book</button>
+        <button type="submit" class="btn btn-success">Submit book</button>
 
     </form>
 
