--- a/bookstore/src/main/resources/templates/booklist.html
+++ b/bookstore/src/main/resources/templates/booklist.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
     <title>Booklist</title>
 </head>
 
@@ -11,25 +12,27 @@
 
     <h2>Books</h2>
 
-    <table>
+    <table class="table table-striped">
         <tr>
             <th>Author</th>
             <th>Title</th>
             <th>ISBN</th>
             <th>Year</th>
+            <th>Delete</th>
+            <th>Edit</th>
         </tr>
         <tr th:each="book : ${books}">
             <td th:text="${book.author}"></td>
             <td th:text="${book.title}"></td>
             <td th:text="${book.isbn}"></td>
             <td th:text="${book.publicationYear}"></td>
-            <td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+            <td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
             <td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
         </tr>
 
     </table>
 
-    <a href="/add">Add Book</a>
+    <a href="/add" class="btn btn-success">Add Book</a>
 
 </body>
 
