--- a/bookstore/src/main/resources/templates/edit.html
+++ b/bookstore/src/main/resources/templates/edit.html
@@ -1,11 +1,10 @@
-<html>
-
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
     <title>Edit page</title>
 </head>
 
