--- a/bookstore/src/main/resources/templates/booklist.html
+++ b/bookstore/src/main/resources/templates/booklist.html
@@ -18,6 +18,7 @@
             <th>Title</th>
             <th>ISBN</th>
             <th>Year</th>
+            <th>Category</th>
             <th>Delete</th>
             <th>Edit</th>
         </tr>
@@ -26,8 +27,11 @@
             <td th:text="${book.title}"></td>
             <td th:text="${book.isbn}"></td>
             <td th:text="${book.publicationYear}"></td>
+            <td th:text="${book.category.name}"></td>
+
             <td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
             <td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
+
         </tr>
 
     </table>
