--- a/bookstore/src/main/resources/templates/booklist.html
+++ b/bookstore/src/main/resources/templates/booklist.html
@@ -10,6 +10,12 @@
 
 <body>
 
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out" />
+    </form>
+
+    <h1>Hello <span sec:authentication="name"></span>!</h1>
+
     <h2>Books</h2>
 
     <table class="table table-striped">
@@ -19,7 +25,7 @@
             <th>ISBN</th>
             <th>Year</th>
             <th>Category</th>
-            <th>Delete</th>
+            <th sec:authorize="hasAuthority('ADMIN')">Delete</th>
             <th>Edit</th>
         </tr>
         <tr th:each="book : ${books}">
@@ -29,7 +35,8 @@
             <td th:text="${book.publicationYear}"></td>
             <td th:text="${book.category.name}"></td>
 
-            <td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
+            <td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}"
+                    class="btn btn-danger">Delete</a></td>
             <td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
 
         </tr>
